<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coursera.mobile.selfie.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_list"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sync"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
