<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" > 

    <Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="Save"
			android:id="@+id/buttonAdd"
			android:onClick="onSaveButtonClick"></Button>
    
    <EditText
        android:id="@+id/ui_add_record_folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_record_folder_name"
        android:inputType="text" >
    </EditText>
    <EditText
        android:id="@+id/ui_add_record_record_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_record_record_name"
        android:inputType="text" >
    </EditText>
    <EditText
        android:id="@+id/ui_add_record_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_record_user_id"
        android:inputType="text" >
    </EditText>
    <EditText
        android:id="@+id/ui_add_record_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_record_user_password"
        android:inputType="text|textPassword" >
    </EditText>

   <!--  <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addUrl"
        android:text="@string/add_url" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.84"
        android:orientation="vertical">
    </LinearLayout>

    <ProgressBar
      android:id="@+id/progressBar_loading"
      style="@android:style/Widget.ProgressBar.Large"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/button1"
      android:visibility="invisible" 
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/url"
        android:layout_below="@+id/url"
        android:layout_marginTop="18dp"
        android:onClick="downloadImages"
        android:text="@string/download_and_display_image" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteDownloadedImages"
        android:text="@string/clear_directory" /> -->

</LinearLayout>
